fix positioning for hero and featured block on mobile index page

--- a/src/scss/blocks/button.scss
+++ b/src/scss/blocks/button.scss
@@ -1,9 +1,9 @@
 .button {
-    padding-top: 1em;
-    padding-bottom: 1em;
+    padding-top: 0.75em;
+    padding-bottom: 0.75em;
     text-transform: uppercase;
     font-weight: bold;
-    border: 2px solid black;
+    border: 2px solid #434343;
     text-align: center;
 
     &:hover {
