--- a/src/scss/blocks/featured.scss
+++ b/src/scss/blocks/featured.scss
@@ -57,7 +57,7 @@
         }
     }
     &__product-name {
-        margin-bottom: 8px;
+        // margin-bottom: 8px;
         grid-area: name;
         z-index: 1;
         @media(min-width: $tablet) {
@@ -70,6 +70,8 @@
     }
     &__title {
         text-transform: uppercase;
+        font-size: 17px;
+        line-height: 20px;
         color: $green-color;
         font-weight: bold;
         grid-area: title;
@@ -82,7 +84,7 @@
         }
     }
     &__product {
-        margin-top: 30px;
+        margin-top: 23px;
         grid-area: product;
         @media(min-width: $tablet) {
             margin: 0 13% 0 0;
@@ -92,26 +94,30 @@
         }
     }
     &__description {
-        margin-bottom: 34px;
+        font-size: 15px;
+        line-height: 24px;
+        margin-bottom: 18px;
         @media(min-width: $tablet) {
             margin-bottom: 3rem;
         }
     }
     &__characteristic {
         display: flex;
+        font-size: 15px;
+        line-height: 20px;
         border-bottom: 1px solid #ececec;
-        height: 2.5em;
+        height: 39px;
         align-items: center;
     }
     &__parameter {
-        flex-basis: 40%;
+        flex-basis: 37%;
     }
     &__data {
-        flex-basis: 60%;
+        flex-basis: 63%;
     }
     &__photo {
         grid-area: photo;
-        margin: 28px 0;
+        margin: 28px 0 22px 0;
         @media(min-width: $tablet) {
             margin: 0;
         }
@@ -137,9 +143,9 @@
     }
     &__price {
         text-align: center;
-        font-size: 1em;
+        line-height: 24px;
         font-weight: bold;
-        margin-bottom: 1.75em;
+        margin-bottom: 25px;
         @media(min-width: $tablet) {
             font-size: 1.2em;
         }
