--- a/src/scss/blocks/hero.scss
+++ b/src/scss/blocks/hero.scss
@@ -6,8 +6,8 @@
     &\--index {
         background-image: url('../img/hero-mobile.png');
         background-repeat: no-repeat;
-        background-position: 50% 0%;
-        background-size: auto $hero-height-mobile--index * 1.24;
+        background-position: 50% -14px;
+        background-size: auto $hero-height-mobile--index * 1.3;
         background-color: $grey-color--index;
     }
 
@@ -16,7 +16,8 @@
     }
 
     &__title {
-        font-size: 1.6rem;
+        font-size: 27px;
+        line-height: 30px;
         font-weight: 600;
         text-align: center;
         position: absolute;
@@ -28,7 +29,7 @@
     }
 
     &__title\--index {
-        top: $hero-height-mobile--index * 0.28;
+        top: $hero-height-mobile--index * 0.25;
         transform: translateX(-50%);
     }
 
