--- a/src/scss/blocks/section-title.scss
+++ b/src/scss/blocks/section-title.scss
@@ -1,6 +1,9 @@
 .section-title {
-    font-size: 1.4rem;
-    font-weight: bold; 
+    font-size: 25px;
+    line-height: 30px;
+    font-weight: bold;
+    position: relative;
+    top: -5px;
 
     @media(min-width: $tablet) { 
         font-size: 2.3em;
