--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -8,13 +8,14 @@ body {
     margin: 0;
     padding: 0;
     font-family: "Open Sans", sans-serif;
+    font-size: 17px;
 }
 
 $top-menu-height-mobile: 80px;
 $top-menu-height-tablet-desktop: 90px;
 $tablet: 600px;
 $desktop: 900px;
-$hero-height-mobile--index: 280px;
+$hero-height-mobile--index: 282px;
 $hero-height-mobile: 175px;
 $hero-height-tablet-desktop--index: 630px;
 $hero-height-tablet: 220px;
